crates/vcs-hooks/tests/snapshots/hooks_generator_test__windows__creates_local_hook_files-2.snap
---
source: crates/vcs-hooks/tests/hooks_generator_test.rs
expression: "clean_powershell(fs::read_to_string(post_push).unwrap())"
---
#!/usr/bin/env pwsh
$ErrorActionPreference = 'Stop'
$PSNativeCommandErrorActionPreference = $true

Set-Item -Path "Env:ARG0" -Value "$PSCommandPath"
for ($i = 0; $i -lt $args.Count; $i++) {
  Set-Item -Path "Env:ARG$($i + 1)" -Value "$($args[$i])"
}

# Automatically generated by moon. DO NOT MODIFY!
# https://moonrepo.dev/docs/guides/vcs-hooks

moon check --all

if ($LASTEXITCODE -ne 0) {
  exit $LASTEXITCODE
}
