crates/vcs-hooks/tests/snapshots/hooks_generator_test__windows__creates_local_hook_files_as_bash-2.snap
---
source: crates/vcs-hooks/tests/hooks_generator_test.rs
expression: "clean_powershell(fs::read_to_string(post_push).unwrap())"
---
#!/usr/bin/env bash
set -eo pipefail

# Automatically generated by moon. DO NOT MODIFY!
# https://moonrepo.dev/docs/guides/vcs-hooks

moon check --all
